--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,293 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>Buck's Cup Of Joe</title>
+
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600|Roboto+Mono:300,400&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome Icons  -->
+    <script src="https://kit.fontawesome.com/3e932090ad.js"></script>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/master.css">
+
   </head>
-  <body>
-    Hello World.
+  <body data-spy="scroll" data-target="#navbar">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top-lg sticky-top" id="navbar">
+
+      <div class="navbar-collapse collapse dual-nav order-2 order-lg-1 justify-content-end">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link text-uppercase text-right mx-4" href="#menu">menu</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link text-uppercase text-right mx-4" href="#location">location</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link text-uppercase text-right mx-4" href="#about">about</a>
+              </li>
+          </ul>
+      </div>
+
+      <a href="#header" class="navbar-brand mx-auto order-0 order-lg-2 p-2"><img src="images/BucksLOGO.png" alt="Logo" width="214px" height="60"></a>
+
+      <div class="navbar-collapse collapse dual-nav order-3 order-lg-3">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link text-uppercase text-right mx-4" href="#testimonials">testimonials</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link text-uppercase text-right mx-4" href="#gallery">gallery</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link text-uppercase text-right mx-4" href="#contact">contact</a>
+              </li>
+          </ul>
+      </div>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+
+    </nav>
+
+    <header class="container-fluid position-relative px-0" id="header">
+      <video src="videos/BucksCupOfJoeVideo.mp4" autoplay loop muted poster="images/BucksCupOfJoeDoorLogo.jpg"></video>
+    </header>
+
+    <section class="container-fluid py-5">
+      <div class="container py-5">
+        <div class="row text-center">
+          <div class="col-lg-4">
+            <h6 class="text-uppercase mb-4">location</h6>
+            <p class="text-body font-weight-light sub-info mb-5">
+              <a class="text-body" href="https://goo.gl/maps/hA5vHgvRCPDNfgYb7" target="_blank">
+              2584 Ted Trout Dr
+              <br>
+              Lufkin, Texas 75904
+              </a>
+            </p>
+          </div>
+          <div class="col-lg-4">
+            <h6 class="text-uppercase mb-4">contact</h6>
+            <p class="text-body font-weight-light sub-info mb-5">
+              <a class="text-body" href="tel:+1-936-699-2825" target="_blank">(936) 699-2825</a>
+              <br>
+              <a class="text-body" href="mailto:bucks@mycci.net" target="_blank">bucks@mycci.net</a>
+            </p>
+          </div>
+          <div class="col-lg-4">
+            <h6 class="text-uppercase mb-4">hours</h6>
+            <p class="text-body font-weight-light sub-info mb-5">
+              Monday — Friday | 6am — 4:30pm
+              <br>
+              Saturday — Sunday | closed
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <a href="https://www.doordash.com/business/270737/?utm_source=partner-link&utm_medium=website&utm_campaign=270737&utm_content=red-m" target="_blank" alt="Order Food Delivery with DoorDash" title="Order Food Delivery with DoorDash" style="text-decoration: none"><div style="position: relative; width:209px; height:45px; margin: 0px auto; background-image: url(https://cdn.doordash.com/media/button/button_red_m.svg); color:transparent">Order Food Delivery with DoorDash</div></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="container-fluid bg-div-1"></div>
+
+    <%- include("partials/menu") -%>
+
+    <div class="container-fluid bg-div-2"></div>
+
+
+    <section class="container-fluid px-0 py-5" id="location">
+      <div class="container py-5">
+        <div class="row text-center justify-content-center mb-5">
+          <div class="col-lg-8">
+            <h2 class="text-uppercase">Location</h2>
+            <p class="font-weight-light">We are located just next door to Gucamole's Mexican Cantina. For Drive-Thru Service turn onto Della Russel Rd and follow the signs.</p>
+          </div>
+        </div>
+
+        <div id="googleMap" style="width:100%; height: 400px;"></div>
+      </div>
+    </section>
+
+    <div class="container-fluid bg-div-3"></div>
+
+    <section class="container-fluid py-5" id="about">
+      <div class="container py-5">
+        <div class="row text-center justify-content-center">
+          <div class="col-lg-8">
+            <h2 class="text-uppercase">About</h2>
+            <p class="font-weight-light mb-4">Buck's Cup of Joe is a locally-founded, locally-run coffee shop proudly serving the greater Lufkin / Hudson area. Our passion is sourcing and serving the best beverages and food possible — from hot, iced, or frozen coffee (plus tea and hot chocolate) to deliciously prepared good eats. We grind our coffee beans fresh every day, use a state-of-the-art espresso machine, and employ professionally trained coffee aficionados. These are just a few of the things that make us Lufkin / Hudson's favorite coffee shop. </p>
+            <a href="https://www.facebook.com/buckscupofjoe/" target="_blank"><button type="button" class="btn btn-outline text-uppercase px-3 py-2">Visit Us On Facebook</button></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid bg-texture text-white py-5" id="testimonials">
+      <div class="container py-5">
+        <div class="row text-center justify-content-center">
+          <div class="col-lg-8">
+            <h2 class="text-uppercase sm-mobile">Testimonials</h2>
+          </div>
+        </div>
+      </div>
+
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner text-center mb-5 pb-5">
+          <div class="carousel-item active">
+            <div class="row justify-content-center">
+              <div class="col-8">
+                <p>"Absolutely best Coffee in Lufkin!"</p>
+                <p class="font-italic">—Keri Slomba</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row justify-content-center">
+              <div class="col-8">
+                <p>"Great atmosphere 💕 and awesome coffee!!!!!"</p>
+                <p class="font-italic">—Kristin Wilkins</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row justify-content-center">
+              <div class="col-8">
+                <p>"Love the decor and the service!"</p>
+                <p class="font-italic">—Emily Goodwin</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row justify-content-center">
+              <div class="col-8">
+                <p>"LOVE Buck’s!! Friendliest people & the BEST coffee hands down 😍🙌🏻 Will forever be my coffee shop!!! 💕💕"</p>
+                <p class="font-italic">—Brittney Alberto</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
+
+    <section class="container-fluid py-5" id="gallery">
+
+      <div class="container py-5">
+        <div class="row text-center justify-content-center">
+          <div class="col-lg-8">
+            <h2 class="text-uppercase">Gallery</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-6">
+            <img class="img-fluid mb-5" src="images/donuts-breakfast-gallery-1.jpg" alt="Bags of Donuts with Buck's logo on them.">
+          </div>
+          <div class="col-lg-1"></div>
+          <div class="col-lg-5">
+            <img class="img-fluid mb-5" src="images/caramel-frappuccino-gallery-2.jpg" alt="Frozen Caramel Frapuccino with whipped cream and caramel shavings on top.">
+          </div>
+        </div>
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-4">
+            <img class="img-fluid mb-5" src="images/best-cupcakes-gallery-4.jpg" alt="Cupcake">
+          </div>
+          <div class="col-lg-3">
+            <img class="img-fluid mb-5" src="images/sweet-drinks-lufkin-gallery-3.jpg" alt="Strawberry drink with fresh strawberry toppings">
+          </div>
+          <div class="col-lg-4">
+            <img class="img-fluid mb-5" src="images/cookies-baked-goods-gallery-5.jpg" alt="assortment of delicious cookies and cupcakes">
+          </div>
+        </div>
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-4">
+            <img class="img-fluid mb-5" src="images/best-frappuccino-lufkin-gallery-6.jpg" alt="Frozen Frapuccino with whipped cream and chocolate toppings.">
+          </div>
+          <div class="col-lg-1"></div>
+          <div class="col-lg-4">
+            <img class="img-fluid mb-5" src="images/best-good-eats-lufkin-hudson-gallery-7.jpg" alt="cookies and cupcakes with packaged heart shaped cookies">
+          </div>
+        </div>
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-5">
+            <img class="img-fluid mb-5" src="images/best-coffee-gallery-8.jpg" alt="Delicious frappuccino with banana and chocolate toppings.">
+          </div>
+          <div class="col-lg-1"></div>
+          <div class="col-lg-6">
+            <img class="img-fluid mb-5" src="images/assortment-of-syrups-gallery-9.jpg" alt="Assortment of Delicious Syrups.">
+          </div>
+        </div>
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-4">
+            <img class="img-fluid mb-5" src="images/free-fur-latte-gallery-10.jpg" alt="Small Puppy enjoying his fur latte.">
+          </div>
+          <div class="col-lg-4">
+            <img class="img-fluid mb-5" src="images/fur-latte-gallery-11.jpg" alt="Furry dog loving his fur latte.">
+          </div>
+          <div class="col-lg-4">
+            <img class="img-fluid mb-5" src="images/cute-dog-fur-latte-gallery-12.jpg" alt="Cute dog licking his free fur latte.">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="container-fluid bg-div-4"></div>
+
+    <section class="container-fluid py-5" id="contact">
+      <div class="container py-5">
+        <div class="row text-center justify-content-center">
+          <div class="col-lg-8">
+            <h2 class="text-uppercase">Contact</h2>
+            <p class="font-weight-light mb-4">As generational residents of the Lufkin / Hudson area, our committment to the community runs deep. We call this corner of East Texas home, and welcome ideas and feedback from our friends and neighbors to help us continually improve the Buck's Cup of Joe experience. Share your thoughts over a nice cup of coffee, or simply send an email.</p>
+            <a href="mailto:bucks@mycci.net" target="_blank"><button type="button" class="btn btn-outline text-uppercase px-3 py-2">Email</button></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="container-fluid py-5">
+      <div class="row text-center">
+        <div class="col-lg-12">
+          <p class="text-center text-light mb-3">© Buck's Cup of Joe</p>
+          <a href="https://www.facebook.com/buckscupofjoe/" target="_blank"><i class="fab fa-facebook text-light"></i></a>
+        </div>
+      </div>
+    </footer>
+
+
+    <!-- GoogleMaps JS -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyDILWeNIZwO9KwNbvTuw0o5f1U_MCVGg&callback=initMap" async defer></script>
+    <script src="js/googleMaps.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </body>
 </html>
